sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:14: error: value fin is not a member of Unit
possible cause: maybe a semicolon is missing before `value fin'?
      } fin = fin - 1
        ^